--- a/network/config.json
+++ b/network/config.json
@@ -19,7 +19,7 @@
   },
   "features": {
     "search": true,
-    "groupSelectorAttribute": false,
+    "groupSelectorAttribute": true,
     "hoverBehavior": "dim"
   },
   "informationPanel": {
